# J.A.R.V.I.S.

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .mcp_pids  Dockerfile  app.py  config.yaml  database.py  debug_mqtt.py  download_model.sh  pyproject.toml  requirements.txt  start_eufy_server.sh  start_fish_speech.sh  start_go2rtc.sh  start_mcp_servers.sh  stop_mcp_servers.sh  test_eufy_ws.py  tools.py  transcribe_script.py  wake_word.py  weather_server.py
backend/agent/: graph.py
backend/services/: audio.py  eufy.py  home_assistant.py  llm.py  mcp.py  openwb.py  roborock.py  spotify.py  system.py
frontend/: index.html  jarvis_animation.js  script.js  style.css
scripts/: dev_start.sh  generate_cert.sh  service_start.sh  setup_eufy.sh
